--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="main.css" rel="stylesheet" type="text/css">
     <title>Maxine Ellah</title>
   </head>
   <body>
     <h2>Maxine Ellah</h2>
 
     <div>
-      <img src="images/black.jpg" alt="Image not found" width="">
+      <img src="images/black.jpg" alt="Image not found">
     </div>
 
   </body>
