header and img centered on page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Maxine Ellah</title>
   </head>
   <body>
-    <h2>Maxine Ellah</h2>
-
+    <div class="header">
+      <h2>Maxine Ellah</h2>
+    </div>
+    
     <div>
       <img src="images/black.jpg" alt="Image not found">
     </div>
