added google fonts

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <link href="main.css" rel="stylesheet" type="text/css">
-    <title>Maxine Ellah</title>
+    <link href='https://fonts.googleapis.com/css?family=Lora|Bitter|Domine|Droid+Sans|Roboto+Slab|Muli' rel='stylesheet' type='text/css'>    <title>Maxine Ellah</title>
   </head>
   <body>
     <div class="header">
       <h2>Maxine Ellah</h2>
     </div>
-    
+
     <div>
-      <img src="images/black.jpg" alt="Image not found">
+      <img src="images/black.jpg" alt="Image not found" width="40%" height="40%">
     </div>
 
   </body>
