add images to work.html

--- a/work.html
+++ b/work.html
@@ -10,8 +10,26 @@
       <h2>Maxine Ellah</h2>
     </div>
 
-    <div>
+    <br>
+    <br>
 
+    <div>
+      <img src="images/womanwave.jpg" alt="blackerlines.jpg" width="60%" height="60%">
+    </div>
+
+    <br>
+    <br>
+
+
+    <div>
+      <img src="images/chosen 3.jpg" alt="blackerlines.jpg" width="60%" height="60%">
+    </div>
+
+    <br>
+    <br>
+
+    <div>
+      <img src="images/blackerlines2.jpg" alt="blackerlines.jpg" width="70%" height="70%">
     </div>
 
   </body>
