--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <link href="main.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora|Bitter|Domine|Droid+Sans|Roboto+Slab|Muli' rel='stylesheet' type='text/css'>    <title>Maxine Ellah</title>
   </head>
+
   <body>
     <div class="header">
       <h2>Maxine Ellah</h2>
     </div>
 
     <div>
-      <img src="images/black.jpg" alt="Image not found" width="40%" height="40%">
+      <a href="work.html">
+        <img src="images/black.jpg" alt="Image not found" width="40%" height="40%">
+      </a>
     </div>
-
+<!-- 
     <div class="nav">
-      <h4></h4>
-      <h4></h4>
-    </div>
+       <a href='mailto:maxine.ellah@gmail.com'>
+        <h4>Contact</h4>
+      </a>
+    </div> -->
 
   </body>
 </html>
