--- a/work.html
+++ b/work.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div class="header">
-      <h2>Maxine Ellah</h2>
+      <a href="index.html">
+        <h2>Maxine Ellah</h2>
+      </a>
     </div>
 
     <br>
@@ -29,7 +31,7 @@
     <br>
 
     <div>
-      <img src="images/blackerlines2.jpg" alt="blackerlines.jpg" width="70%" height="70%">
+      <img src="images/blackerlines2.jpg" alt="blackerlines.jpg" width="70%" height="7el0%">
     </div>
 
   </body>
