change blacker lines image smaller

--- a/work.html
+++ b/work.html
@@ -12,26 +12,30 @@
       </a>
     </div>
 
-    <br>
-    <br>
+    <div class="content">
 
-    <div>
-      <img src="images/womanwave.jpg" alt="blackerlines.jpg" width="60%" height="60%">
-    </div>
+      <br>
+      <br>
 
-    <br>
-    <br>
+      <div>
+        <img src="images/womanwave.jpg" alt="blackerlines.jpg" width="60%" height="60%">
+      </div>
+
+      <br>
+      <br>
 
 
-    <div>
-      <img src="images/chosen 3.jpg" alt="blackerlines.jpg" width="60%" height="60%">
-    </div>
+      <div>
+        <img src="images/chosen 3.jpg" alt="blackerlines.jpg" width="60%" height="60%">
+      </div>
 
-    <br>
-    <br>
+      <br>
+      <br>
 
-    <div>
-      <img src="images/blackerlines2.jpg" alt="blackerlines.jpg" width="70%" height="7el0%">
+      <div>
+        <img src="images/blackerlinessmall.jpg" alt="blackerlines.jpg" width="70%" height="7el0%">
+      </div>
+
     </div>
 
   </body>
