--- a/work.html
+++ b/work.html
@@ -14,28 +14,14 @@
 
     <div class="content">
 
-      <br>
-      <br>
-
-      <div>
         <img src="images/womanwave.jpg" alt="blackerlines.jpg" width="60%" height="60%">
-      </div>
-
-      <br>
-      <br>
 
 
-      <div>
         <img src="images/chosen 3.jpg" alt="blackerlines.jpg" width="60%" height="60%">
-      </div>
 
-      <br>
-      <br>
 
-      <div>
-        <img src="images/blackerlinessmall.jpg" alt="blackerlines.jpg" width="70%" height="7el0%">
-      </div>
-
+        <img src="images/blackerlinessmall.jpg" alt="blackerlines.jpg" width="70%" height="70%">
+    
     </div>
 
   </body>
