--- a/work.html
+++ b/work.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="utf-8">
     <link href="main.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lora|Bitter|Domine|Droid+Sans|Roboto+Slab|Muli' rel='stylesheet' type='text/css'>    <title>Maxine Ellah</title>
+    <link href='https://fonts.googleapis.com/css?family=Lora|Bitter|Domine|Droid+Sans|Roboto+Slab|Muli' rel='stylesheet' type='text/css'>
+    <title>Maxine Ellah</title>
+
+    <link rel="stylesheet" type="text/css" media="screen" href="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css" />
+    <style type="text/css">
+    a.fancybox img {
+        border: none;
+    }
+</style>
   </head>
   <body>
     <div class="header">
@@ -14,15 +22,39 @@
 
     <div class="content">
 
-        <img src="images/womanwave.jpg" alt="blackerlines.jpg" width="60%" height="60%">
+        <img class="fancybox" src="images/womanwave.jpg" alt="blackerlines.jpg" width="60%" height="60%">
 
 
-        <img src="images/chosen 3.jpg" alt="blackerlines.jpg" width="60%" height="60%">
+        <img class="fancybox" src="images/chosen 3.jpg" alt="blackerlines.jpg" width="60%" height="60%">
 
 
-        <img src="images/blackerlinessmall.jpg" alt="blackerlines.jpg" width="70%" height="70%">
-    
+        <img class="fancybox" src="images/blackerlinessmall.jpg" alt="blackerlines.jpg" width="70%" height="70%">
+
     </div>
 
+
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
+  <script type="text/javascript">
+      $(function($){
+          var addToAll = false;
+          var gallery = false;
+          var titlePosition = 'inside';
+          $(addToAll ? 'img' : 'img.fancybox').each(function(){
+              var $this = $(this);
+              var title = $this.attr('title');
+              var src = $this.attr('data-big') || $this.attr('src');
+              var a = $('<a href="#" class="fancybox"></a>').attr('href', src).attr('title', title);
+              $this.wrap(a);
+          });
+          if (gallery)
+              $('a.fancybox').attr('rel', 'fancyboxgallery');
+          $('a.fancybox').fancybox({
+              titlePosition: titlePosition
+          });
+      });
+      $.noConflict();
+  </script>
   </body>
 </html>
