create artCtrl module

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
         <img src="images/black.jpg" alt="Image not found" width="40%" height="40%">
       </a>
     </div>
-<!-- 
+<!--
     <div class="nav">
        <a href='mailto:maxine.ellah@gmail.com'>
         <h4>Contact</h4>
       </a>
     </div> -->
-
+    
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular-route.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
