--- a/work.html
+++ b/work.html
@@ -22,15 +22,15 @@
 
     <div class="content">
 
-        <img class="fancybox" src="images/madonna.jpg" alt="blackerlines.jpg" width="50%" height="50%">
+        <img class="fancybox" src="images/madonna.jpg" alt="madonna.jpg" width="50%" height="50%">
 
-        <img class="fancybox" src="images/Untitled-1.jpg" alt="blackerlines.jpg" width="60%" height="60%">
+        <img class="fancybox" src="images/Untitled-1.jpg" alt="Untitled-1.jpg" width="60%" height="60%">
 
-        <img class="fancybox" src="images/womanwave.jpg" alt="blackerlines.jpg" width="60%" height="60%">
+        <img class="fancybox" src="images/womanwave.jpg" alt="womanwave.jpg" width="60%" height="60%">
 
-        <img class="fancybox" src="images/blackerlinessmall.jpg" alt="blackerlines.jpg" width="80%" height="80%">
+        <img class="fancybox" src="images/blackerlinessmall.jpg" alt="blackerlinessmall.jpg" width="80%" height="80%">
 
-        <img class="fancybox" src="images/chosen 3.jpg" alt="blackerlines.jpg" width="70%" height="70%">
+        <img class="fancybox" src="images/chosen 3.jpg" alt="chosen3.jpg" width="70%" height="70%">
 
 
     </div>
