re-positioning images in css

--- a/directives/artInfo.html
+++ b/directives/artInfo.html
@@ -1,2 +1,2 @@
-<img class="image" ng-src="{{ info.image }}">
+<img class="image" ng-src="{{ info.image }}"></img>
 <!-- <p class="name">{{ info.name }}</p> -->
