--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link href="main.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lora|Bitter|Domine|Droid+Sans|Roboto+Slab|Muli' rel='stylesheet' type='text/css'>    <title>Maxine Ellah</title>
+    <link href='https://fonts.googleapis.com/css?family=Lora|Bitter|Domine|Droid+Sans|Roboto+Slab|Muli' rel='stylesheet' type='text/css'>
+
+    <title>Maxine Ellah</title>
   </head>
 
   <body ng-app="artworks">
