--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
 
       <div class="content">
 
-        <div class="picture">
+        <div class="madonna">
 
 
           <art-images info="madonna"></art-images>
@@ -36,27 +36,37 @@
 
         </div>
 
-        <div class="picture">
+        <div class="untitled">
 
-          <img class="fancybox" src="images/Untitled-1.jpg" alt="Untitled-1.jpg" width="60%" height="60%">
 
-        </div>
+          <art-images info="untitled"></art-images>
 
-        <div class="picture">
-
-          <img class="fancybox" src="images/womanwave.jpg" alt="womanwave.jpg" width="60%" height="60%">
+          <!-- <img class="fancybox" src="images/Untitled-1.jpg" alt="Untitled-1.jpg" width="60%" height="60%"> -->
 
         </div>
 
-        <div class="picture">
+        <div class="womanwave">
 
-          <img class="fancybox" src="images/blackerlinessmall.jpg" alt="blackerlinessmall.jpg" width="80%" height="80%">
+          <art-images info="womanwave"></art-images>
+
+          <!-- <img class="fancybox" src="images/womanwave.jpg" alt="womanwave.jpg" width="60%" height="60%"> -->
 
         </div>
 
-        <div class="picture">
+        <div class="lines">
 
-          <img class="fancybox" src="images/chosen3.jpg" alt="chosen3.jpg" width="70%" height="70%">
+          <art-images info="lines"></art-info>
+
+          <!-- <img class="fancybox" src="images/blackerlinessmall.jpg" alt="blackerlinessmall.jpg" width="80%" height="80%"> -->
+
+        </div>
+
+        <div class="chosen">
+
+          <art-images info="chosen"></art-info>
+
+
+          <!-- <img class="fancybox" src="images/chosen3.jpg" alt="chosen3.jpg" width="70%" height="70%"> -->
 
         </div>
 
