--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
         <div class="madonna">
 
 
-          <art-images info="madonna"></art-images>
+          <art-images info="gallery"></art-images>
 
 
         </div>
