--- a/directives/frontPage.html
+++ b/directives/frontPage.html
@@ -1,3 +1,3 @@
-<a ng-href="./work.html">
-  <img ng-click="./work.html" ng-src="{{ info.image }}" alt="Image not found" width="40%" height="40%">
+<a ng-href="work.html">
+  <img ng-click="work.html" ng-src="{{ info.image }}" alt="Image not found" width="40%" height="40%">
 </a>
