change info.image to infor.images

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <!-- Directive -->
 
     <script src="directives/frontPage.js"></script>
+    <script src="directives/artInfo.js"></script>
+
 
   </body>
 </html>
