--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
 
         <img class="fancybox" src="images/womanwave.jpg" alt="blackerlines.jpg" width="60%" height="60%">
 
-        <img class="fancybox" src="images/blackerlinessmall.jpg" alt="blackerlines.jpg" width="80%" height="80%">
+        <img class="fancybox" src="images/float.jpg" alt="blackerlines.jpg" width="80%" height="80%">
 
         <img class="fancybox" src="images/chosen 3.jpg" alt="blackerlines.jpg" width="70%" height="70%">
 
