--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport"  content="width=device-width, initial-scale=1">
     <title>Maxine Ellah</title>
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Fira+Mono|Palanquin+Dark|Roboto+Mono|Roboto+Slab|Rubik|Space+Mono|Work+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
