add public to file path in html

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport"  content="width=device-width, initial-scale=1">
     <title>Maxine Ellah</title>
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Fira+Mono|Palanquin+Dark|Roboto+Mono|Roboto+Slab|Rubik|Space+Mono|Work+Sans:300,400" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="public/css/main.css">
   </head>
   <body>
     <div id="content">
 
     </div>
   </body>
-  <script src="bundle.js">
+  <script src="public/bundle.js">
 
   </script>
 </html>
